--- a/app/build.gradle
+++ b/app/build.gradle
@@ -59,7 +59,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
-
+    implementation 'com.jakewharton.timber:timber:4.7.1'
 
     implementation "androidx.room:room-runtime:2.2.5"
     kapt "androidx.room:room-compiler:$room_version"
